# tensorflow-word2vec

./: README.md  stack.yaml  tensorflow-word2vec.cabal
app/: Main.hs
src/TensorFlow/Examples/Text8/: Parse.hs
